# super-release

./: .dockerignore  .gitignore  .release.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  package.json  pnpm-lock.yaml  schema.json
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-preview.yml  release.yml
artifacts/super-release-darwin-aarch64/: super-release-darwin-aarch64.tar.gz.sha256
artifacts/super-release-darwin-x86_64/: super-release-darwin-x86_64.tar.gz.sha256
artifacts/super-release-linux-aarch64/: super-release-linux-aarch64.tar.gz.sha256
artifacts/super-release-linux-x86_64/: super-release-linux-x86_64.tar.gz.sha256
e2e/: README.md  compare.sh  package-lock.json  package.json
npm/: README.md  install.js  package.json
src/: cli.rs  commit.rs  config.rs  git.rs  github.rs  macros.rs  main.rs  notes.rs  package.rs  pm.rs  preview.rs  run.rs  version.rs
src/config/: branch.rs  mod.rs  schema.rs
src/forge/: github.rs  mod.rs
src/forge/github/: api.rs  detect.rs  links.rs
src/plugin/: changelog.rs  exec.rs  git_commit.rs  git_tag.rs  mod.rs  npm.rs  subprocess.rs
src/resolver/: mod.rs  node.rs
src/step/: changelog.rs  exec.rs  github.rs  mod.rs  npm.rs  subprocess.rs
src/step/github/: comments.rs
templates/: github-release-body.tera
tests/: dependency_propagation_test.rs  exec_test.rs  github_step_test.rs  idempotent_test.rs  integration_test.rs  maintenance_test.rs  monorepo_maintenance_test.rs  multi_release_test.rs  prerelease_test.rs  preview_test.rs  workspace_test.rs
tests/common/: mod.rs
