[package]
name = "super-release"
version = "0.1.0"
edition = "2024"
description = "A fast semantic-release alternative for monorepos, written in Rust"

[[bin]]
name = "super-release"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
git2 = "0.19"
git-cliff-core = { version = "2.12", default-features = false }
rayon = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
