[package]
name = "super-release"
version = "1.11.0"
edition = "2024"
description = "A fast semantic-release alternative for monorepos, written in Rust"

[[bin]]
name = "super-release"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
console = "0.16"
glob-match = "0.2"
git2 = { version = "0.21", default-features = false }
git-cliff-core = { version = "2.13", default-features = false, features = ["github"] }
indicatif = "0.18"
rayon = "1.11"
regex = "1.12"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = { version = "0.33", features = ["serde"] }
jsonschema = { version = "0.47", default-features = false, features = ["resolve-file"] }
serde-saphyr = "0.0.29"
octocrab = "0.54"
tokio = { version = "1.52.3", features = ["rt"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
bytes = "1.12.1"
glob = "0.3.3"
secrecy = "0.8"
percent-encoding = "2.3"

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
